src/objects/Field_Report_SiteCapture__c.object
<CustomObject>
    <fields>
        <fullName>Opportunity_Project__c</fullName>
        <label>Opportunity Project</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Site_Capture_Reports</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>fn_assignee__c</fullName>
        <label>SiteCapture Assigned User</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Jesus Gutierrez</fullName>
                </value>
                <value>
                    <fullName>Jacob Cantu</fullName>
                </value>
                <value>
                    <fullName>Michael Barker</fullName>
                </value>
                <value>
                    <fullName>Alberto@premiersolar.com</fullName>
                </value>
                <value>
                    <fullName>maritza@premiersolar.com</fullName>
                </value>
                <value>
                    <fullName>Brandy.v@premiersolar.com</fullName>
                </value>
                <value>
                    <fullName>Mikey</fullName>
                </value>
                <value>
                    <fullName>Owners</fullName>
                </value>
                <value>
                    <fullName>givonni@premiersolar.com</fullName>
                </value>
                <value>
                    <fullName>charles@premiersolar.com</fullName>
                </value>
                <value>
                    <fullName>jeremy@premiersolar.com</fullName>
                </value>
                <value>
                    <fullName>rich.w@premiersolar.com</fullName>
                </value>
                <value>
                    <fullName>Leah.Houghton</fullName>
                </value>
                <value>
                    <fullName>premiers-admin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fn_due_date__c</fullName>
        <label>SiteCapture Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fn_status__c</fullName>
        <label>SiteCapture Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NEW</fullName>
                </value>
                <value>
                    <fullName>COMPLETE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fn_template_key__c</fullName>
        <label>SiteCapture Template</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Test54343242</fullName>
                </value>
                <value>
                    <fullName>sr-install_only</fullName>
                </value>
                <value>
                    <fullName>sunpower</fullName>
                </value>
                <value>
                    <fullName>Sunrun_FULL_EPC_20180624143115</fullName>
                </value>
                <value>
                    <fullName>electrical_mpu</fullName>
                </value>
                <value>
                    <fullName>Electrical-Sub-Panel</fullName>
                </value>
                <value>
                    <fullName>electrical-line/load</fullName>
                </value>
                <value>
                    <fullName>electrical-derate</fullName>
                </value>
                <value>
                    <fullName>sr-install_only_NV</fullName>
                </value>
                <value>
                    <fullName>sunpower_NV</fullName>
                </value>
                <value>
                    <fullName>PSS_NV</fullName>
                </value>
                <value>
                    <fullName>sr-install_only_NM</fullName>
                </value>
                <value>
                    <fullName>FSD 2018</fullName>
                </value>
                <value>
                    <fullName>Site Assessment Roof Top</fullName>
                </value>
                <value>
                    <fullName>PSS_TX</fullName>
                </value>
                <value>
                    <fullName>sr-install_only_TX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>parent_id__c</fullName>
        <formula>Opportunity_Project__r.Job_Num__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent ID</label>
        <type>Text</type>
    </fields>
    <label>SiteCapture Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Field Report SiteCapture Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SiteCapture Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>